0.02
 - Add <?xml> header to XML document.
 - Add 04-map.t test.
 - Add get_line_by_id() and get_line_by_name() methods to doc.
 - Move author tests to xt/ directory.
 - Rewrite SEE ALSO section to new style.
 - Update Module::Install to 1.16 version.
 - Update copyright years to 2015.

0.01 2015-01-01T00:38:31+01:00
 - First version