@@ -2,6 +2,7 @@
  - Add <?xml> header to XML document.
  - Add 04-map.t test.
  - Add get_line_by_id() and get_line_by_name() methods to doc.
+ - Add tests for get_node_by_id() and get_node_by_name() methods.
  - Move author tests to xt/ directory.
  - Rewrite SEE ALSO section to new style.
  - Update Module::Install to 1.16 version.
